--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "5.0.1"
+  
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,7 +41,6 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^6.0.0",
-    "@babel/plugin-proposal-private-property-in-object": "^1.0.0"
+    "gh-pages": "^6.0.0"
   }
 }
