--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "portfolio",
-  "version": "0.1.0",
+  "name": "mark_robertson_portfolio",
+  "version": "0.1.0 - Beta",
   "private": true,
   "homepage": "https://markrobertson67.github.io",
   "dependencies": {
