Added Home screen photo and started ReadMe

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
   "short_name": "Portfolio App",
   "name": "Mark Robertson's Portfolio App",
-  "version": "0.1.5 - Beta",
+  "version": "1.0.0",
   "icons": [
     {
       "src": "favicon.ico",
