--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mark_robertson_portfolio",
-  "version": "0.1.5 - Beta",
+  "version": "1.0.0",
   "private": true,
   "homepage": "https://markrobertson67.github.io",
   "dependencies": {
